test: 프로덕션 코드 수정으로 인한 테스트 변경
- ConsumerServiceTest에서 event publish 검증 삭제
- PointSchedulerTest에서 afterConfirm, afterRefund 테스트 추가